--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -12,4 +12,4 @@ block content
 						div
 							input(type="password", placeholder="Password", name="password").block
 						div
-							button(type="submit").btn Submit
+							button(type="submit").btn.btn-primary Sign in
