--- a/views/layouts/application.jade
+++ b/views/layouts/application.jade
@@ -3,12 +3,12 @@ html
 	head
 		title Ci-Fi
 
-		link(rel="stylesheet", href="css/bootstrap.min.css")
-		link(rel="stylesheet", href="css/bootstrap-responsive.min.css")
-		link(rel="stylesheet", href="css/app.css")
+		link(rel="stylesheet", href="/css/bootstrap.min.css")
+		link(rel="stylesheet", href="/css/bootstrap-responsive.min.css")
+		link(rel="stylesheet", href="/css/app.css")
 		script(src="/js/jquery.min.js")
 	body
 		div.navbar.navbar-inverse
 			div.navbar-inner
-				a.brand Doccify
+				a(href="/").brand Doccify
 		block content
