Viola\!\! Cloning and running builds works \!

--- a/views/home/dashboard.jade
+++ b/views/home/dashboard.jade
@@ -11,21 +11,23 @@ block content
 			- if(projects.length === 0)
 				div.alert.center No projects yet!
 			- else
-				div.thumbnail.span2
-					div.caption.center
-						h4
-							- for(var i=0; i<projects.length; i++) {
-								=projects[i].name
-							- }
-						hr
-					div.center
-						h5 Build Status 
-							- if (projects.status)
-								- if (project.status === 'passing')
-									span.label.label-success Passing
-								- else if (project.status === 'pending')
-									span.label.label-info Pending
-								- else if (project.status === 'failed')
-									span.label.label-info Failed
-							- else
-								span.label.label-default Unknown
+				- for(var i=0; i<projects.length; i++) {
+					div.thumbnail.span2
+						div.caption.center
+							h4
+									=projects[i].name
+							hr
+						div.center
+							h5 Build Status 
+								- if (projects[i].status)
+									- if (projects[i].status === 'passing')
+										span.label.label-success Passing
+									- else if (projects[i].status === 'pending')
+										span.label.label-warning Pending
+									- else if (projects[i].status === 'failed')
+										span.label.label-important Failed
+								- else
+									span.label.label-default Unknown
+						
+						a(href="/build/#{projects[i]._id}").btn.btn-primary Run build
+				- }
