--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,6 +38,13 @@ hr {
 	margin: 10px;
 }
 
+.output {
+	background: #000;
+	font: 12pt monospace;
+	overflow: scroll;
+	color: #fff;
+}
+
 /*.inline {
 	display: inline-block;
 	margin-right: 80%;
