--- a/views/layouts/application.jade
+++ b/views/layouts/application.jade
@@ -7,6 +7,7 @@ html
 		link(rel="stylesheet", href="/css/bootstrap-responsive.min.css")
 		link(rel="stylesheet", href="/css/app.css")
 		script(src="/js/jquery.min.js")
+		script(src="/js/app.js")
 	body
 		div.navbar.navbar-inverse
 			div.navbar-inner
