--- a/views/layouts/application.jade
+++ b/views/layouts/application.jade
@@ -11,5 +11,5 @@ html
 	body
 		div.navbar.navbar-inverse
 			div.navbar-inner
-				a(href="/").brand Doccify
+				a(href="/").brand Ci-Fi
 		block content
