--- a/views/projects/build.jade
+++ b/views/projects/build.jade
@@ -4,6 +4,7 @@ block content
 	div.container
 		div
 			h3 #{project.name}
+			span.status 
 			button(id="#{project._id}").btn.btn-success.build.pull-right.pull-up Start build
 		hr
 
